Fixed Modal link and z-index

--- a/src/components/modal/styles.module.scss
+++ b/src/components/modal/styles.module.scss
@@ -9,7 +9,7 @@
         background: rgba(0, 0, 0, 0.54);
         top: 0;
         left: 0;
-        z-index: 999;
+        z-index: 1000;
         display: flex;
         align-items: center;
         justify-content: center;
